# django-caravaggio-rest-api

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  Dockerfile  MANIFEST.in  README.md  TODO.rst  manage.py  requirements.txt  requirements_tests.txt  setup.cfg  setup.py
caravaggio_rest_api/: __init__.py  admin.py  apps.py  drf_viewsets.py  dse_models.py  fields.py  indexes.py  models.py  query.py  serializers.py  settings.py  solr.py  testrunner.py  tests.py  throttling.py  urls.py  utils.py  views.py  wsgi.py
caravaggio_rest_api/drf/: viewsets.py
caravaggio_rest_api/drf_haystack/: filters.py  serializers.py  viewsets.py
caravaggio_rest_api/dse/: columns.py
caravaggio_rest_api/example/company/: admin.py  models.py  search_indexes.py
caravaggio_rest_api/example/company/api/: serializers.py  views.py
caravaggio_rest_api/example/company/tests/: companies.json  tests.py
caravaggio_rest_api/haystack/: inputs.py
caravaggio_rest_api/haystack/backends/: __init__.py  solr_backend.py  utils.py
caravaggio_rest_api/management/commands/: sync_indexes.py
caravaggio_rest_api/templates/rest_framework_swagger/: index.html
caravaggio_rest_api/users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
caravaggio_rest_api/users/api/: serializers.py  views.py
caravaggio_rest_api/users/tests/: tests.py
docs/: conf.py  dse_gcp.md  dse_local.md  local_environment.md  todo.rst
docs/api/: caravaggio_rest_api.drf.rst  caravaggio_rest_api.drf_haystack.rst  caravaggio_rest_api.dse.rst  caravaggio_rest_api.example.company.api.rst  caravaggio_rest_api.example.company.rst  caravaggio_rest_api.example.company.tests.rst  caravaggio_rest_api.example.rst  caravaggio_rest_api.haystack.backends.rst  caravaggio_rest_api.haystack.rst  caravaggio_rest_api.logging.rst  caravaggio_rest_api.management.commands.rst  caravaggio_rest_api.management.rst  caravaggio_rest_api.rst  caravaggio_rest_api.users.api.rst  caravaggio_rest_api.users.management.commands.rst  caravaggio_rest_api.users.management.rst  caravaggio_rest_api.users.migrations.rst  caravaggio_rest_api.users.rst  caravaggio_rest_api.users.tests.rst  modules.rst
environment/dev-local/: Dockerfile
internal_docs/: dse_gcp.md  local_environment.md
requirements/: base.in  dev.in
src/caravaggio_rest_api/: __init__.py  admin.py  apps.py  caravaggio_paginator.py  fields.py  models.py  pagination.py  settings.py  sub_commander.py  testrunner.py  tests.py  throttling.py  urls.py  utils.py  views.py  wsgi.py
src/caravaggio_rest_api/drf/: __init__.py  authentication.py  exceptions.py  middleware.py  mixins.py  routers.py  serializers.py  viewsets.py
src/caravaggio_rest_api/drf_haystack/: filters.py  query.py  serializers.py  viewsets.py
src/caravaggio_rest_api/dse/: columns.py  models.py
src/caravaggio_rest_api/dse/backends/: dse_backend.py  utils.py
src/caravaggio_rest_api/example/company/: __init__.py  admin.py  apps.py  models.py  search_indexes.py  urls.py
src/caravaggio_rest_api/example/company/api/: serializers.py  views.py
src/caravaggio_rest_api/example/company/tests/: companies.json  tests.py
src/caravaggio_rest_api/haystack/: indexes.py  inputs.py  query.py
src/caravaggio_rest_api/haystack/backends/: __init__.py  solr_backend.py  utils.py
src/caravaggio_rest_api/logging/: models.py
src/caravaggio_rest_api/management/commands/: sync_indexes.py
src/caravaggio_rest_api/users/: admin.py  forms.py  models.py  serializers.py  views.py
src/caravaggio_rest_api/users/api/: permissions.py  serializers.py  urls.py  views.py
src/caravaggio_rest_api/users/management/commands/: createclient.py  createorganization.py  createuser.py  manageorganization.py
src/caravaggio_rest_api/users/migrations/: 0001_initial.py
src/caravaggio_rest_api/users/tests/: clients.json  tests.py
