# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
# The globally unique name of the project--though it's common to use the name
# of the Python package in this project, this can be anything.  Just don't use
# a name that already exists in PyPI
name = django-caravaggio-rest-api
# A brief summary of the project--this shows up in PyPI search listings
summary = A sample of how the stsci_python projects should be structured
# A longer description of the project.  Note that for any option, newlines can
# be added so long as they're prefixed with whitespace.  This description is
# shown on the PyPI page for the project.  The description may use
# reStructured Text formatting.
description = A Django REST API for Big Data Projects.
# We may list any number of authors here
author = Javier Alperte
# Usually best to just put team@buildgroupai.com here...
author-email = team@buildgroupai.com
home-page = http://github.com/intellstartup/django-caravaggio-rest-api
# A string indicating the license for this software; this is optional and
# should be ommitted if the license is listed as a trove classifier (see below)
# license = BSD
license = MIT
# A longer description of the project.  Note that for any option, newlines can
# be added so long as they're prefixed with whitespace.  This description is
# shown on the PyPI page for your project.  The description may use
# reStructured Text formatting.
#
# Alternately, we may use the description-file option.  This reads your
# project's description from one or more text files (each file should be listed
# on a separate line).  This example takes the description from the README file
# and also appends the CHANGES file.  This only used if description is missing
# or empty.
# description-file =
#     README
#     CHANGELOG
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = http://github.com/intellstartup/django-caravaggio-rest-api
project-urls =
    Documentation = https://github.com/intellstartup/django-caravaggio-rest-api/docs
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Adding some valid trove classifiers is a good idea (and would be a better
# idea if more people actually used them to begin with).  A database of
# currently valid classifiers is at:
# http://pypi.python.org/pypi?%3Aaction=list_classifiers
# Here are some to start with that will apply to most projects:
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
    wheel==0.34.2
    django==2.2.14
    django-configurations==2.1
    django-registration==3.1
    django-cassandra-engine==1.6.0
    djangorestframework-filters==1.0.0.dev0
    # djangorestframework>=3.7,<3.10 # Imposed by DRF-Haystack
    djangorestframework-queryfields==1.0.0
    django-rest-auth==0.9.5
    drf-yasg==1.17.1
    packaging==20.4
    pyyaml==5.3.1
    rest-framework-cache==0.1-bgds-1
    django-redis==4.12.1
    markdown==3.2.2
    drf-haystack==2.8.1
    pysolr==3.9.0
    solrq==1.1.1
    fuzzywuzzy==0.18.0

test_requires =
    spitslurp==0.4
    django-debug-toolbar==2.2
    django-extensions==2.2.9
    psycopg2-binary==2.8.5
    #cassandra-driver>=3.15.0
    dse-driver==2.11.1

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.0,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

dependency_links =
    git+ssh://git@github.com/intellstartup/django-cassandra-engine.git@add-consistency-level-support#egg=django-cassandra-engine-1.6.0
    git+ssh://git@github.com/intellstartup/django-rest-framework-cache.git#egg=rest-framework-cache-0.1-bgds-1

[options.extras_require]
spatial = gdal==2.3.3; geopy>=1.17.0'
dev = spitslurp>=0.4; django-debug-toolbar>=1.10.1; django-extensions>=2.1.3; psycopg2-binary>=2.7.5; dse-driver>=2.6

[options.packages.find]
where = src
exclude =
    tests*

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = myapp.module:function
# For example:
# console_scripts =
#     fibonacci = myapp.skeleton:run

[aliases]
build_html = build_sphinx -b html --build-dir build/sphinx/html
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = _build_docs/sphinx

[upload_sphinx]
upload-dir = _build_docs/html

[sdist]
keep-temp = 1
dist-dir = dist/source

[pycodestyle]
count = False
ignore =  # E226, E302, E41
max-line-length = 79
statistics = True
exclude = migrations,static,media,docs,internal_docs
